Update component di Navbar class

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     </style>
   </head>
   <style>
-    body {
-      font-family: "Poppins", sans-serif;
-    }
-  </style>
+  body {
+    font-family: 'Poppins', sans-serif;
+  }
+</style>
 
   <body class="bg-[#F1F4F5]">
     <nav class="flex flex-row max-w-6xl mx-auto justify-between items-center mt-10 py-4 px-6 shadow-2xl rounded-md">
@@ -58,11 +58,11 @@
       </svg>
 
       <ul class="flex flex-row gap-x-7">
-        <li><a href="" class="font-medium text-[#080C2E]">Product</a></li>
-        <li><a href="" class="font-medium text-[#080C2E]">Services</a></li>
-        <li><a href="" class="font-medium text-[#080C2E]">Pricing</a></li>
-        <li><a href="" class="font-medium text-[#080C2E]">Testimonials</a></li>
-        <li><a href="" class="font-medium text-[#080C2E]">Blog</a></li>
+        <li><a href="" class="text-base text-indigo-950 hover:text-violet-700 hover:font-semibold">Product</a></li>
+        <li><a href="" class="text-base text-indigo-950 hover:text-violet-700 hover:font-semibold">Services</a></li>
+        <li><a href="" class="text-base text-indigo-950 hover:text-violet-700 hover:font-semibold">Pricing</a></li>
+        <li><a href="" class="text-base text-indigo-950 hover:text-violet-700 hover:font-semibold">Testimonials</a></li>
+        <li><a href="" class="text-base text-indigo-950 hover:text-violet-700 hover:font-semibold">Blog</a></li>
       </ul>
 
       <!-- mini-cart-badge.svg -->
@@ -84,7 +84,7 @@
           </svg>
         </div>
 
-        <a href="" class="bg-indigo-950 text-white text-base px-8 py-3 rounded-full">Sign In</a>
+        <a href="" class="bg-indigo-950 hover:bg-violet-700 text-white text-base px-8 py-3 rounded-full">Sign In</a>
       </div>
     </nav>
   </body>
