Add Features Section

--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap");
+      body {
+        font-family: "Poppins", sans-serif;
+      }
     </style>
   </head>
-  <style>
-    body {
-      font-family: "Poppins", sans-serif;
-    }
-  </style>
 
   <body class="bg-[#F1F4F5]">
     <!-- Header -->
@@ -60,11 +58,21 @@
       </svg>
 
       <ul class="flex flex-row gap-x-7">
-        <li><a href="" class="text-base text-indigo-950 hover:text-violet-700 hover:font-semibold">Product</a></li>
-        <li><a href="" class="text-base text-indigo-950 hover:text-violet-700 hover:font-semibold">Services</a></li>
-        <li><a href="" class="text-base text-indigo-950 hover:text-violet-700 hover:font-semibold">Pricing</a></li>
-        <li><a href="" class="text-base text-indigo-950 hover:text-violet-700 hover:font-semibold">Testimonials</a></li>
-        <li><a href="" class="text-base text-indigo-950 hover:text-violet-700 hover:font-semibold">Blog</a></li>
+        <li>
+          <a href="" class="text-base text-indigo-950 hover:text-violet-700 hover:font-semibold">Product</a>
+        </li>
+        <li>
+          <a href="" class="text-base text-indigo-950 hover:text-violet-700 hover:font-semibold">Services</a>
+        </li>
+        <li>
+          <a href="" class="text-base text-indigo-950 hover:text-violet-700 hover:font-semibold">Pricing</a>
+        </li>
+        <li>
+          <a href="" class="text-base text-indigo-950 hover:text-violet-700 hover:font-semibold">Testimonials</a>
+        </li>
+        <li>
+          <a href="" class="text-base text-indigo-950 hover:text-violet-700 hover:font-semibold">Blog</a>
+        </li>
       </ul>
 
       <!-- mini-cart-badge.svg -->
@@ -210,8 +218,8 @@
     </section>
 
     <!-- Partner Section -->
-    <section class="patner max-w-6xl mx-auto mt-12">
-      <div class="flex flex-row gap-x-10 justify-between items-center">
+    <section class="patners max-w-6xl mx-auto py-12">
+      <div class="flex flex-row gap-x-10 justify-between items-center px-11">
         <svg width="141" height="34" viewBox="0 0 141 34" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g clip-path="url(#clip0_1_209)">
             <path d="M42.5228 24.3168H52.4342V21.3314H46.0456V10.0865H42.5228V24.3168Z" fill="#080C2E" />
@@ -410,6 +418,212 @@
             </clipPath>
           </defs>
         </svg>
+      </div>
+    </section>
+
+    <!-- Feature Section -->
+    <section class="Features max-w-6xl mx-auto py-12">
+      <h3 class="font-semibold text-5xl font-['Clash-Display'] text-indigo-950 text-center mb-8">Your Best Choice</h3>
+      <div class="grid grid-cols-4 gap-x-5">
+        <div class="flex flex-col rounded-2xl shadow-md bg-white py-8 px-5 gap-y-8">
+          <svg width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M31.5292 27.6V16.2917C31.5292 15.2375 30.6667 14.375 29.6126 14.375H24.0542"
+              stroke="#640EF1"
+              stroke-width="3"
+              stroke-linecap="round"
+              stroke-linejoin="round" />
+            <path
+              d="M26.9292 11.5L23.4792 14.375L26.9292 17.25"
+              stroke="#640EF1"
+              stroke-width="3"
+              stroke-linecap="round"
+              stroke-linejoin="round" />
+            <path
+              d="M14.4708 19.55V27.6"
+              stroke="#640EF1"
+              stroke-width="3"
+              stroke-linecap="round"
+              stroke-linejoin="round" />
+            <path
+              d="M14.7584 18.975C16.8226 18.975 18.4959 17.3017 18.4959 15.2375C18.4959 13.1734 16.8226 11.5 14.7584 11.5C12.6942 11.5 11.0209 13.1734 11.0209 15.2375C11.0209 17.3017 12.6942 18.975 14.7584 18.975Z"
+              stroke="#640EF1"
+              stroke-width="3"
+              stroke-linecap="round"
+              stroke-linejoin="round" />
+            <path
+              d="M14.4709 34.5C16.3762 34.5 17.9208 32.9554 17.9208 31.05C17.9208 29.1446 16.3762 27.6 14.4709 27.6C12.5655 27.6 11.0209 29.1446 11.0209 31.05C11.0209 32.9554 12.5655 34.5 14.4709 34.5Z"
+              stroke="#640EF1"
+              stroke-width="3"
+              stroke-linecap="round"
+              stroke-linejoin="round" />
+            <path
+              d="M31.5292 34.5C33.4346 34.5 34.9792 32.9554 34.9792 31.05C34.9792 29.1446 33.4346 27.6 31.5292 27.6C29.6238 27.6 28.0792 29.1446 28.0792 31.05C28.0792 32.9554 29.6238 34.5 31.5292 34.5Z"
+              stroke="#640EF1"
+              stroke-width="3"
+              stroke-linecap="round"
+              stroke-linejoin="round" />
+            <path
+              d="M17.25 42.1667H28.75C38.3334 42.1667 42.1667 38.3334 42.1667 28.75V17.25C42.1667 7.66671 38.3334 3.83337 28.75 3.83337H17.25C7.66671 3.83337 3.83337 7.66671 3.83337 17.25V28.75C3.83337 38.3334 7.66671 42.1667 17.25 42.1667Z"
+              stroke="#640EF1"
+              stroke-width="3"
+              stroke-linecap="round"
+              stroke-linejoin="round" />
+          </svg>
+          <div class="flex flex-col gap-y-3">
+            <h3 class="text-xl font-bold text-indigo-950">Extra Layers</h3>
+            <p class="text-base text-gray-500 leading-7">Making your project more secure avoilding DDoS</p>
+          </div>
+          <a href="" class="text-violet-600 font-semibold">Learn more</a>
+        </div>
+
+        <div class="flex flex-col bg-white rounded-2xl shadow-md py-8 px-5 gap-y-8">
+          <svg width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M24.7633 4.33161L37.2408 11.0591C38.6975 11.8449 38.6975 14.0874 37.2408 14.8733L24.7633 21.6008C23.6516 22.1949 22.3483 22.1949 21.2366 21.6008L8.75913 14.8733C7.30246 14.0874 7.30246 11.8449 8.75913 11.0591L21.2366 4.33161C22.3483 3.73744 23.6516 3.73744 24.7633 4.33161Z"
+              stroke="#640EF1"
+              stroke-width="3"
+              stroke-linecap="round"
+              stroke-linejoin="round" />
+            <path
+              d="M6.91921 19.4159L18.515 25.2234C19.9525 25.9517 20.8725 27.4275 20.8725 29.0375V40.0009C20.8725 41.5917 19.205 42.6075 17.7867 41.8984L6.19087 36.0909C4.75337 35.3625 3.83337 33.8867 3.83337 32.2767V21.3134C3.83337 19.7225 5.50087 18.7067 6.91921 19.4159Z"
+              stroke="#640EF1"
+              stroke-width="3"
+              stroke-linecap="round"
+              stroke-linejoin="round" />
+            <path
+              d="M39.0808 19.4159L27.4849 25.2234C26.0474 25.9517 25.1274 27.4275 25.1274 29.0375V40.0009C25.1274 41.5917 26.7949 42.6075 28.2133 41.8984L39.8091 36.0909C41.2466 35.3625 42.1666 33.8867 42.1666 32.2767V21.3134C42.1666 19.7225 40.4991 18.7067 39.0808 19.4159Z"
+              stroke="#640EF1"
+              stroke-width="3"
+              stroke-linecap="round"
+              stroke-linejoin="round" />
+          </svg>
+          <div class="flex flex-col gap-y-3">
+            <h3 class="text-xl font-bold text-indigo-950">Customizable</h3>
+            <p class="text-base text-gray-500 leading-7">Only install what your business needs to grow</p>
+          </div>
+          <a href="" class="text-violet-600 font-semibold">Learn more</a>
+        </div>
+
+        <div class="relative bg-[#080C2E] rounded-2xl flex flex-col shadow-md py-8 px-5">
+          <div class="absolute top-3 right-5">
+            <svg width="178" height="221" viewBox="0 0 178 221" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g filter="url(#filter0_f_1_107)">
+                <ellipse
+                  cx="97.38"
+                  cy="102.527"
+                  rx="32.0478"
+                  ry="76.7916"
+                  transform="rotate(30 97.38 102.527)"
+                  fill="#424560" />
+              </g>
+              <defs>
+                <filter
+                  id="filter0_f_1_107"
+                  x="0"
+                  y="-15.8951"
+                  width="194.76"
+                  height="236.845"
+                  filterUnits="userSpaceOnUse"
+                  color-interpolation-filters="sRGB">
+                  <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                  <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
+                  <feGaussianBlur stdDeviation="25" result="effect1_foregroundBlur_1_107" />
+                </filter>
+              </defs>
+            </svg>
+          </div>
+
+          <div class="z-10 flex flex-col gap-y-8">
+            <svg width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M13.1867 34.7875V30.82" stroke="white" stroke-width="3" stroke-linecap="round" />
+              <path d="M23 34.7875V26.8525" stroke="white" stroke-width="3" stroke-linecap="round" />
+              <path d="M32.8133 34.7875V22.8658" stroke="white" stroke-width="3" stroke-linecap="round" />
+              <path
+                d="M32.8133 11.2125L31.9317 12.2475C27.0442 17.9592 20.4892 22.0033 13.1867 23.8242"
+                stroke="white"
+                stroke-width="3"
+                stroke-linecap="round" />
+              <path
+                d="M27.1975 11.2125H32.8133V16.8092"
+                stroke="white"
+                stroke-width="3"
+                stroke-linecap="round"
+                stroke-linejoin="round" />
+              <path
+                d="M17.25 42.1667H28.75C38.3333 42.1667 42.1667 38.3333 42.1667 28.75V17.25C42.1667 7.66666 38.3333 3.83333 28.75 3.83333H17.25C7.66668 3.83333 3.83334 7.66666 3.83334 17.25V28.75C3.83334 38.3333 7.66668 42.1667 17.25 42.1667Z"
+                stroke="white"
+                stroke-width="3"
+                stroke-linecap="round"
+                stroke-linejoin="round" />
+            </svg>
+
+            <div class="flex flex-col gap-y-3">
+              <h3 class="text-xl font-bold text-white">AI Automation</h3>
+              <p class="text-base text-[#8D90A8] leading-7">Decide the business flow based on latest reports</p>
+            </div>
+
+            <a href="" class="text-white font-semibold">Learn more</a>
+          </div>
+        </div>
+
+        <div class="flex flex-col rounded-2xl shadow-md gap-y-8 bg-white py-8 px-5">
+          <svg width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M11.5 11.9791V15.8125"
+              stroke="#640EF1"
+              stroke-width="3"
+              stroke-linecap="round"
+              stroke-linejoin="round" />
+            <path
+              d="M42.1666 23V17.25C42.1666 7.66671 38.3333 3.83337 28.7499 3.83337H17.2499C7.66659 3.83337 3.83325 7.66671 3.83325 17.25V28.75C3.83325 38.3334 7.66659 42.1667 17.2499 42.1667H22.9999"
+              stroke="#640EF1"
+              stroke-width="3"
+              stroke-linecap="round"
+              stroke-linejoin="round" />
+            <path
+              d="M19.1667 11.9791V15.8125"
+              stroke="#640EF1"
+              stroke-width="3"
+              stroke-linecap="round"
+              stroke-linejoin="round" />
+            <path
+              d="M11.5 30.6666V34.5"
+              stroke="#640EF1"
+              stroke-width="3"
+              stroke-linecap="round"
+              stroke-linejoin="round" />
+            <path
+              d="M19.1667 30.6666V34.5"
+              stroke="#640EF1"
+              stroke-width="3"
+              stroke-linecap="round"
+              stroke-linejoin="round" />
+            <path
+              d="M26.8333 13.8959H34.4999"
+              stroke="#640EF1"
+              stroke-width="3"
+              stroke-linecap="round"
+              stroke-linejoin="round" />
+            <path
+              d="M3.83325 23H42.1666"
+              stroke="#640EF1"
+              stroke-width="3"
+              stroke-linecap="round"
+              stroke-linejoin="round" />
+            <path
+              d="M41.3232 38.9658C40.2499 40.825 38.2374 42.0708 35.9374 42.0708C32.5066 42.0708 30.3982 38.6208 30.3982 38.6208M30.5324 32.7558C31.6057 30.8775 33.6182 29.6316 35.9374 29.6316C40.0966 29.6316 42.1666 33.0816 42.1666 33.0816M42.1666 29.2291V33.0625H38.3332M34.2315 38.6016H30.3982V42.1666"
+              stroke="#640EF1"
+              stroke-width="3"
+              stroke-linecap="round"
+              stroke-linejoin="round" />
+          </svg>
+          <div class="flex flex-col gap-y-3">
+            <h2 class="text-xl font-bold text-indigo-950">Auto-Scaling</h2>
+            <p class="text-base text-gray-500 leading-7">Have a long weekend without worrying any loss</p>
+          </div>
+          <a href="" class="text-violet-600 font-semibold">Learn more</a>
+        </div>
       </div>
     </section>
   </body>
