--- a/index.html
+++ b/index.html
@@ -774,5 +774,61 @@
         </div>
       </div>
     </section>
+
+    <!-- Show Case Project Section -->
+    <div class="show-case flex flex-col max-w-6xl mx-auto py-12 justify-center items-center gap-y-8">
+      <div class="flex flex-col gap-y-3 justify-center items-center">
+        <h2 class="text-5xl font-semibold font-['Clash-Display']">Our Showcase</h2>
+        <p class="text-base text-center text-gray-500 leading-8">
+          They built amazing website to help more people around the world
+          <br />
+          by using our recommendation services and products
+        </p>
+      </div>
+      <div class="flex flex-wrap gap-x-10">
+        <div class="group relative">
+          <div class="absolute bottom-8 w-full flex justify-center items-center">
+            <a
+              href=""
+              class="group-hover:opacity-100 opacity-0 transition-all ease-in-out duration-1000 text-white font-semibold bg-violet-800 px-7 py-3 rounded-full shadow-xl shadow-violet-500">
+              View Details
+            </a>
+          </div>
+          <img
+            src="assets/showcase1.png"
+            class="group-hover:border-4 w-[320px] h-[220px] rounded-xl border-violet-800"
+            alt=""
+            srcset="" />
+        </div>
+        <div class="group relative">
+          <div class="absolute bottom-8 w-full flex justify-center items-center">
+            <a
+              href=""
+              class="group-hover:opacity-100 opacity-0 transition-all ease-in-out duration-1000 text-white font-semibold bg-violet-800 px-7 py-3 rounded-full shadow-xl shadow-violet-500">
+              View Details
+            </a>
+          </div>
+          <img
+            src="assets/showcase2.png"
+            class="group-hover:border-4 w-[320px] h-[220px] rounded-xl border-violet-800"
+            alt=""
+            srcset="" />
+        </div>
+        <div class="group relative">
+          <div class="absolute bottom-8 w-full flex justify-center items-center">
+            <a
+              href=""
+              class="group-hover:opacity-100 opacity-0 transition-all ease-in-out duration-1000 text-white font-semibold bg-violet-800 px-7 py-3 rounded-full shadow-xl shadow-violet-500">
+              View Details
+            </a>
+          </div>
+          <img
+            src="assets/showcase3.png"
+            class="group-hover:border-4 w-[320px] h-[220px] rounded-xl border-violet-800"
+            alt=""
+            srcset="" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
