Add Faq Section

--- a/index.html
+++ b/index.html
@@ -830,5 +830,240 @@
         </div>
       </div>
     </div>
+
+    <!-- Faq Section-->
+    <!-- Faq Section-->
+    <section class="faq max-w-6xl mx-auto py-12">
+      <h2 class="text-5xl font-semibold font-['Clash-Display'] text-[#080C2E] text-center mb-6">
+        Frequently Asked Questions
+      </h2>
+
+      <div class="grid grid-cols-2 gap-x-8">
+        <!-- LEFT COLUMN -->
+        <div class="flex flex-col gap-y-6">
+          <!-- CARD 1 -->
+          <details class="faq-card group bg-white rounded-2xl p-5">
+            <summary class="flex flex-row gap-x-6 justify-between items-center cursor-pointer list-none">
+              <h3 class="text-lg font-bold text-[#080C2E]">Why do we need to use Kapp?</h3>
+
+              <!-- Arrow -->
+              <svg
+                class="transition-transform duration-300 group-open:rotate-180"
+                width="30"
+                height="30"
+                viewBox="0 0 30 30"
+                fill="none">
+                <rect width="30" height="30" rx="15" fill="white" />
+                <path
+                  d="M20.9401 12.7124L16.0501 17.6024C15.4726 18.1799 14.5276 18.1799 13.9501 17.6024L9.06006 12.7124"
+                  stroke="#080C2E"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round" />
+              </svg>
+            </summary>
+          </details>
+
+          <!-- CARD 2 -->
+          <details open class="faq-card group bg-white rounded-2xl p-5">
+            <summary class="flex flex-row gap-x-6 justify-between items-center cursor-pointer list-none">
+              <div class="flex flex-col gap-y-5">
+                <h3 class="text-lg font-bold text-[#080C2E]">Why do we need to use Kapp?</h3>
+              </div>
+
+              <!-- Arrow (dark) -->
+              <svg
+                class="transition-transform duration-300 group-open:rotate-180"
+                width="30"
+                height="30"
+                viewBox="0 0 30 30"
+                fill="none">
+                <rect x="30" y="30" width="30" height="30" rx="15" transform="rotate(-180 30 30)" fill="#080C2E" />
+                <path
+                  d="M9.05994 17.2876L13.9499 12.3976C14.5274 11.8201 15.4724 11.8201 16.0499 12.3976L20.9399 17.2876"
+                  stroke="white"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round" />
+              </svg>
+            </summary>
+
+            <p class="mt-4 text-sm text-gray-500 leading-8">
+              Kapp is able to develop by themselve without removing
+              <br />
+              the parents permission and lorem dolor si amet fully run
+              <br />
+              network at 100% avoiding data-loss at any moments
+            </p>
+          </details>
+
+          <!-- CARD 3 -->
+          <details class="faq-card group bg-white rounded-2xl p-5">
+            <summary class="flex flex-row gap-x-6 justify-between items-center cursor-pointer list-none">
+              <div class="flex flex-col gap-y-5">
+                <h3 class="text-lg font-bold text-[#080C2E]">Why do we need to use Kapp?</h3>
+              </div>
+
+              <!-- Arrow (dark) -->
+              <svg
+                class="transition-transform duration-300 group-open:rotate-180"
+                width="30"
+                height="30"
+                viewBox="0 0 30 30"
+                fill="none">
+                <rect x="30" y="30" width="30" height="30" rx="15" transform="rotate(-180 30 30)" fill="#080C2E" />
+                <path
+                  d="M9.05994 17.2876L13.9499 12.3976C14.5274 11.8201 15.4724 11.8201 16.0499 12.3976L20.9399 17.2876"
+                  stroke="white"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round" />
+              </svg>
+            </summary>
+
+            <p class="mt-4 text-sm text-gray-500 leading-8">
+              Kapp is able to develop by themselve without removing
+              <br />
+              the parents permission and lorem dolor si amet fully run
+              <br />
+              network at 100% avoiding data-loss at any moments
+            </p>
+          </details>
+        </div>
+
+        <!-- RIGHT COLUMN -->
+        <div class="flex flex-col gap-y-6">
+          <!-- CARD 4 -->
+          <details class="faq-card group bg-white rounded-2xl p-5">
+            <summary class="flex flex-row gap-x-6 justify-between items-center cursor-pointer list-none">
+              <div class="flex flex-col gap-y-5">
+                <h3 class="text-lg font-bold text-[#080C2E]">What if data doesn’t get stored?</h3>
+              </div>
+
+              <!-- Arrow dark -->
+              <svg
+                class="transition-transform duration-300 group-open:rotate-180"
+                width="30"
+                height="30"
+                viewBox="0 0 30 30"
+                fill="none">
+                <rect x="30" y="30" width="30" height="30" rx="15" transform="rotate(-180 30 30)" fill="#080C2E" />
+                <path
+                  d="M9.05994 17.2876L13.9499 12.3976C14.5274 11.8201 15.4724 11.8201 16.0499 12.3976L20.9399 17.2876"
+                  stroke="white"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round" />
+              </svg>
+            </summary>
+
+            <p class="mt-4 text-sm text-gray-500 leading-8">
+              Kapp is able to develop by themselve without removing
+              <br />
+              the parents permission and lorem dolor si amet fully run
+              <br />
+              network at 100% avoiding data-loss at any moments
+            </p>
+          </details>
+
+          <!-- CARD 5 -->
+          <details class="faq-card group bg-white rounded-2xl p-5">
+            <summary class="flex flex-row gap-x-6 justify-between items-center cursor-pointer list-none">
+              <h3 class="text-lg font-bold text-[#080C2E]">Can we guarantee no any loss at all?</h3>
+
+              <!-- Arrow -->
+              <svg
+                class="transition-transform duration-300 group-open:rotate-180"
+                width="30"
+                height="30"
+                viewBox="0 0 30 30"
+                fill="none">
+                <rect width="30" height="30" rx="15" fill="white" />
+                <path
+                  d="M20.9401 12.7124L16.0501 17.6024C15.4726 18.1799 14.5276 18.1799 13.9501 17.6024L9.06006 12.7124"
+                  stroke="#080C2E"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round" />
+              </svg>
+            </summary>
+          </details>
+
+          <!-- CARD 6 (dark background like desain kamu) -->
+          <details class="faq-card group bg-[#080C2E] rounded-2xl p-5">
+            <summary class="flex flex-row gap-x-6 justify-between items-center cursor-pointer list-none">
+              <div class="flex flex-row items-center gap-x-2">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M20 12.2V13.9C20 17.05 18.2 18.4 15.5 18.4H6.5C3.8 18.4 2 17.05 2 13.9V8.5C2 5.35 3.8 4 6.5 4H9.2C9.07 4.38 9 4.8 9 5.25V9.15002C9 10.12 9.32 10.94 9.89 11.51C10.46 12.08 11.28 12.4 12.25 12.4V13.79C12.25 14.3 12.83 14.61 13.26 14.33L16.15 12.4H18.75C19.2 12.4 19.62 12.33 20 12.2Z"
+                    stroke="white"
+                    stroke-width="2"
+                    stroke-miterlimit="10"
+                    stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <path
+                    d="M22 5.25V9.15002C22 10.64 21.24 11.76 20 12.2C19.62 12.33 19.2 12.4 18.75 12.4H16.15L13.26 14.33C12.83 14.61 12.25 14.3 12.25 13.79V12.4C11.28 12.4 10.46 12.08 9.89 11.51C9.32 10.94 9 10.12 9 9.15002V5.25C9 4.8 9.07 4.38 9.2 4C9.64 2.76 10.76 2 12.25 2H18.75C20.7 2 22 3.3 22 5.25Z"
+                    stroke="white"
+                    stroke-width="2"
+                    stroke-miterlimit="10"
+                    stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <path
+                    d="M7.40002 22H14.6"
+                    stroke="white"
+                    stroke-width="2"
+                    stroke-miterlimit="10"
+                    stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <path
+                    d="M11 18.3999V21.9999"
+                    stroke="white"
+                    stroke-width="2"
+                    stroke-miterlimit="10"
+                    stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <path
+                    d="M18.4955 7.25H18.5045"
+                    stroke="white"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <path
+                    d="M15.6957 7.25H15.7047"
+                    stroke="white"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <path
+                    d="M12.8954 7.25H12.9044"
+                    stroke="white"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round" />
+                </svg>
+
+                <h3 class="text-lg font-bold text-white">Can we guarantee no any loss at all?</h3>
+              </div>
+
+              <!-- Arrow -->
+              <svg
+                class="transition-transform duration-300 group-open:rotate-180"
+                width="30"
+                height="30"
+                viewBox="0 0 30 30"
+                fill="none">
+                <rect x="30" y="30" width="30" height="30" rx="15" transform="rotate(-180 30 30)" fill="#080C2E" />
+                <path
+                  d="M9.05994 17.2876L13.9499 12.3976C14.5274 11.8201 15.4724 11.8201 16.0499 12.3976L20.9399 17.2876"
+                  stroke="white"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round" />
+              </svg>
+            </summary>
+          </details>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
