--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
   </head>
 
-  <body class="bg-[#F1F4F5]">
+  <body class="bg-[#F1F4F5] md:overflow-x-hidden">
     <!-- Header -->
     <nav class="max-w-6xl mx-auto mt-10 mb-12 px-6">
       <div class="flex flex-row justify-between items-center px-2 py-4 shadow-2xl rounded-md">
