--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
   </head>
 
-  <body class="bg-[#F1F4F5] md:overflow-x-hidden">
+  <body class="bg-[#F1F4F5]">
     <!-- Header -->
     <nav class="max-w-6xl mx-auto mt-10 mb-12 px-6">
       <div class="flex flex-row justify-between items-center px-2 py-4 shadow-2xl rounded-md">
@@ -2153,7 +2153,7 @@
       </div>
     </section>
 
-    <footer class="footer bg-[#070C29] -mt-[230px] w-screen -z-10">
+    <footer class="footer bg-[#070C29] -mt-[230px] w-full -z-10">
       <div class="max-w-6xl mx-auto py-6 px-6 grid grid-cols-1 md:grid-cols-5 gap-x-8 gap-y-10 pt-[320px]">
         <div
           class="company flex flex-col gap-y-7 md:col-span-2 justify-center items-center text-center md:items-start md:text-left">
